Revert "Fix scrollbar by adding 100vw/100vh to prevent layout shift"
This reverts commit f0eee2302d4b900e17a94439855bfe15bb475965.

--- a/PerfectionWeb-master/src/styles.scss
+++ b/PerfectionWeb-master/src/styles.scss
@@ -11,9 +11,6 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
 }
 
 /* Hide scrollbars globally */
